<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">科企对接</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tab_first">首页</string>
    <string name="tab_second">资讯</string>
    <string name="tab_third">我的</string>

    <string name="no_content">暂未填写</string>

    <string name="expert">专家</string>
    <string name="techrequ">需求</string>
    <string name="comp">企业</string>
    <string name="achv">成果</string>
    <string name="org">机构</string>
    <string name="product">产品</string>
    <string name="project">项目</string>

    <string name="home_requ">悬赏需求</string>
    <string name="home_achv">热门成果</string>
    <string name="home_comp">企业风采</string>
    <string name="home_expert">专家资源</string>
    <string name="home_product">最新产品</string>
    <string name="home_proj">融资项目</string>

    <string name="expertSearchHint">专家搜索</string>
    <string name="compSearchHint">企业搜索</string>
    <string name="achvSearchHint">成果搜索</string>
    <string name="requSearchHint">需求搜索</string>

    <string name="role_arraw">选择条件箭头</string>
    <string name="dialog_txt">正在努力加载</string>
    <string name="back_btn">返回按钮</string>
    <string name="function_btn">功能按钮</string>
    <string name="search">搜索</string>
    <string name="search_close">关闭搜索</string>
    <string name="search_cancel">取消</string>
    <string name="chat_send">发送</string>
    <string name="menu_item_img">选项卡的图片</string>
    <string name="menu_item_txt">选项卡的文字</string>
    <string name="take_pic_btn">照相机</string>
    <string name="preview">预览图片</string>
    <string name="img">图片</string>
    <string name="takePhoto">拍照</string>
    <string name="fromLocal">从手机相册选择</string>
    <string name="title_activity_area">AreaActivity</string>
    <string name="title_activity_msg_group_chat">MsgGroupChatActivity</string>
    <string name="title_activity_my_note">MyNoteActivity</string>
    <string name="title_activity_my_note_infor">MyNoteInforActivity</string>
    <string name="title_activity_photo_preview">PhotoPreviewActivity</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="title_activity_take_photo">TakePhotoActivity</string>
    <string name="expert_tab">热门专家</string>
    <string name="comp_tab">热门企业</string>
    <string name="title_activity_profille">ProfilleActivity</string>
    <string name="net_work_tip">网络连接异常,请检查网络连接</string>
    <string name="quit">注销</string>

    <string name="drop_down_list_header_default_text">Click to refresh&#8230;</string>
    <string name="drop_down_list_header_pull_text">Drop Down to refresh&#8230;</string>
    <string name="drop_down_list_header_release_text">Release to refresh&#8230;</string>
    <string name="drop_down_list_header_loading_text">Loading&#8230;</string>
    <string name="drop_down_list_footer_default_text">More</string>
    <string name="drop_down_list_footer_loading_text">Loading&#8230;</string>
    <string name="drop_down_list_footer_no_more_text">No More</string>

    <string name="image_content">Image</string>
    <string name="enter">进入应用</string>

    <string name="pushmsg_center_no_more_msg">已经到底啦</string>
    <string name="pushmsg_center_pull_up_text">松开加载更多</string>
    <string name="pushmsg_center_pull_down_text">下拉可以刷新</string>
    <string name="pushmsg_center_pull_release_text">松开获取更多</string>
    <string name="pushmsg_center_pull_down_update_time">最后更新时间 : </string>
    <string name="pushmsg_center_load_more_ongoing_text">正在加载中</string>
    <string name="xsearch_loading">正在加载中…</string>

    <!-- 加载图片失败时的提示文本 -->
    <string name="picture_load_image_failed">点击屏幕，重新加载</string>
    <!-- 加载中提示 -->
    <string name="picture_image_loading">正在加载…</string>

    <!-- 下拉刷新和上拉加载更多的文本 -->
    <string name="pull_to_refresh_header_hint_normal">@string/pushmsg_center_pull_down_text</string>
    <string name="pull_to_refresh_header_hint_normal2">上拉可以刷新</string>
    <string name="pull_to_refresh_header_hint_ready">松开后刷新</string>
    <string name="pull_to_refresh_header_hint_loading">@string/pushmsg_center_load_more_ongoing_text</string>
    <string name="pull_to_refresh_header_last_time">@string/pushmsg_center_pull_down_update_time</string>
    <string name="pull_to_refresh_footer_hint_ready">松开载入更多</string>
    <string name="pull_to_refresh_refreshing_label">@string/pull_to_refresh_header_hint_loading</string>
    <string name="pull_to_refresh_no_more_data">@string/pushmsg_center_no_more_msg</string>
    <string name="pull_to_refresh_network_error">网络不给力，请检查网络</string>

    <!-- 图片保存的文字 -->
    <string name="picture_save_succeed">图片已保存到相册</string>
    <string name="picture_save_fail">保存图片失败</string>
    <string name="picture_next_album">下一组：</string>
    <string name="picture_previous_album">上一组：</string>
    <string name="requ_price_label">拟投入:</string>
    <string name="default_price">面议</string>
    <string name="findviewInfor">丰景资讯</string>
</resources>