<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/title_container"
    android:layout_width="fill_parent"
    android:layout_height="46dp"
    android:background="@color/title_bar_bg_color_1"
    android:gravity="center_vertical"
    android:orientation="horizontal">


    <TextView
        android:id="@+id/searchType"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginLeft="5dp"
        android:contentDescription="@string/expert"
        android:drawablePadding="4dp"
        android:drawableRight="@mipmap/bottom_arraw"
        android:paddingTop="6dp"
        android:paddingLeft="6dp"
        android:text="@string/comp"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:ellipsize="end"
        android:paddingBottom="4dp"
        android:paddingLeft="6dp"
        android:paddingTop="6dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/search_input_bg"
        android:cursorVisible="false"
        android:drawableLeft="@mipmap/search_bar_icon_normal"
        android:gravity="center_vertical"
        android:hint="@string/compSearchHint"
        android:inputType="none"
        android:paddingBottom="4dp"
        android:paddingLeft="6dp"
        android:paddingTop="6dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:clickable="true"
        android:windowSoftInputMode="adjustUnspecified|stateHidden" />


    <ImageView
        android:id="@+id/scanBtn"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:scaleType="fitXY"
        android:src="@mipmap/scan" />

</LinearLayout>