<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <!-- 首页图片轮播 -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/white">

        <android.support.v4.view.ViewPager
            android:id="@+id/imgs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp" />

        <LinearLayout
            android:id="@+id/indicator_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:layout_marginBottom="20dp"/>
    </FrameLayout>

    <!-- 各种对象的搜索入口 -->
    <LinearLayout
        android:id="@+id/search_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@mipmap/shor01"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:gravity="center"
                android:layout_marginTop="3dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@mipmap/shor02"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/org"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:gravity="center"
                android:layout_marginTop="3dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@mipmap/shor03"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/expert"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:gravity="center"
                android:layout_marginTop="3dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@mipmap/shor04"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/techrequ"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:gravity="center"
                android:layout_marginTop="3dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@mipmap/shor05"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/achv"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:gravity="center"
                android:layout_marginTop="3dp"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/lightgrayeee"
        android:paddingBottom="6dp"
        android:paddingTop="6dp"
        android:paddingLeft="6dp"
        android:paddingRight="3dp"
        android:layout_gravity="center_vertical|left"
        >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/rewardre"
            android:scaleType="centerCrop"
            android:background="@color/transparent"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_marginLeft="6dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:text="@string/home_requ"/>

    </LinearLayout>
    <ListView
        android:id="@+id/requlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@color/azure"
        android:fastScrollEnabled="false"
        ></ListView>

</LinearLayout>
